--- a/css/sass/_components.scss
+++ b/css/sass/_components.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   
   width: 100%;
+  height: 8rem;
   
   &__personal {
     display: flex;
@@ -49,45 +50,51 @@
 
 .hero {
   position: relative;
-  height: 70vh;
+  // height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   
   &__text {
     font-size: 4rem;
-    padding: 10px 100px;
+    // padding: 10px 100px;
+    // margin: $hero-margin 0;
     line-height: 4rem;
     text-align: center;
-    margin: $hero-margin 0;
   }
   
   .projects {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: 80%;
+    grid-template-rows: repeat(6, 1fr);
+    width: 15%;
     height: 35vh;
-    margin: 0 auto;
+    margin: 0 0 0 auto;
     margin-bottom: $hero-margin;
     
     &__item {
-      background-image: linear-gradient(to right, rgba($c-secondary, 0.4), rgba($c-secondary, 0.4));
+      background: rgba($c-primary, 0.4);
       border: 1px solid black;
       display: flex;
       align-items: center;
       justify-content: center;
+      transition: all .2s;
+      height: 100%;
+      padding: 1rem;
+      
+      &:hover {
+        cursor: pointer;
+        background: white;
+      }
     }
     
     &__text {
-      
+      font-size: 1.4rem;
+      text-transform: uppercase;
+      color: black;
     }
     
     &__link {
-      font-size: 1.4rem;
-      text-transform: uppercase;
       text-decoration: none;
-      color: white;
     }
   }
   
