--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ body {
   background-color: #22a6d4;
   display: flex;
   justify-content: space-between;
-  width: 100%; }
+  width: 100%;
+  height: 8rem; }
   .header__personal {
     display: flex; }
   .header__img {
@@ -52,35 +53,38 @@ body {
 
 .hero {
   position: relative;
-  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around; }
   .hero__text {
     font-size: 4rem;
-    padding: 10px 100px;
     line-height: 4rem;
-    text-align: center;
-    margin: 60px 0; }
+    text-align: center; }
   .hero .projects {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: 80%;
+    grid-template-rows: repeat(6, 1fr);
+    width: 15%;
     height: 35vh;
-    margin: 0 auto;
+    margin: 0 0 0 auto;
     margin-bottom: 60px; }
     .hero .projects__item {
-      background-image: linear-gradient(to right, rgba(39, 126, 133, 0.4), rgba(39, 126, 133, 0.4));
+      background: rgba(34, 166, 212, 0.4);
       border: 1px solid black;
       display: flex;
       align-items: center;
-      justify-content: center; }
-    .hero .projects__link {
+      justify-content: center;
+      transition: all .2s;
+      height: 100%;
+      padding: 1rem; }
+      .hero .projects__item:hover {
+        cursor: pointer;
+        background: white; }
+    .hero .projects__text {
       font-size: 1.4rem;
       text-transform: uppercase;
-      text-decoration: none;
-      color: white; }
+      color: black; }
+    .hero .projects__link {
+      text-decoration: none; }
   .hero .bg-video {
     position: absolute;
     top: 0;
