--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -23,6 +23,7 @@ body {
   font-family: 'Nunito', sans-serif;
   line-height: 1.6rem;
   font-size: 1.6rem;
+  height: 100vh;
   
   // Global text properties here
   
