--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body {
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
   line-height: 1.6rem;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  height: 100vh; }
 
 .container {
   width: 90vw;
@@ -26,12 +27,14 @@ body {
   .header__personal {
     display: flex; }
   .header__img {
-    width: 8rem; }
+    width: 8rem;
+    cursor: pointer; }
   .header__desc {
     color: white;
     font-size: 2rem;
     align-self: center;
-    padding: 0 2rem; }
+    padding: 0 2rem;
+    cursor: pointer; }
   .header .nav {
     display: flex; }
     .header .nav__box:link, .header .nav__box:active, .header .nav__box:visited, .header .nav__box:focus {
@@ -62,31 +65,6 @@ body {
     font-size: 4rem;
     line-height: 4rem;
     text-align: center; }
-  .hero .projects {
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    width: 15%;
-    height: 35vh;
-    margin: 0 0 0 auto;
-    margin-bottom: 60px; }
-    .hero .projects__item {
-      background: white;
-      border: 1px solid black;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all .2s;
-      height: 100%;
-      padding: 1rem; }
-      .hero .projects__item:hover {
-        cursor: pointer;
-        background: white; }
-    .hero .projects__text {
-      font-size: 1.4rem;
-      text-transform: uppercase;
-      color: black; }
-    .hero .projects__link {
-      text-decoration: none; }
   .hero .bg-video {
     position: absolute;
     top: 0;
@@ -100,3 +78,32 @@ body {
       width: 100%;
       height: 100%;
       object-fit: cover; }
+
+.projects {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10rem;
+  margin: 10rem 0; }
+  .projects__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; }
+  .projects__item {
+    background: white;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .2s;
+    padding: 10rem; }
+    .projects__item:hover {
+      cursor: pointer;
+      background: white; }
+  .projects__text {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: black; }
+  .projects__link {
+    text-decoration: none; }
