--- a/skillsquire/views/templates/home.html
+++ b/skillsquire/views/templates/home.html
@@ -1,5 +1,5 @@
 <div class="banner">
-  <a href='/skillsquire'>
+  <a href='/'>
     <span class="heading-home">
       <span class="heading-home--main">SkillSquire</span>
     <span class="heading-home--sub">A coding resources hub</span>
