--- a/opem/views/index.html
+++ b/opem/views/index.html
@@ -16,7 +16,7 @@
         <div class="main-view">
           <nav class="nav">
             <div class="logo-container">
-              <a href="/opem/"><svg class="logo"><use xlink:href="img/sprite.svg#logo"></use></svg></a>
+              <a href="/"><svg class="logo"><use xlink:href="img/sprite.svg#logo"></use></svg></a>
             </div>
             <div class="user-menu">
               <div class="user-menu--large">
