--- a/opem/views/index.html
+++ b/opem/views/index.html
@@ -12,6 +12,7 @@
     </head>
     
     <body ng-app="opem">
+      <div class="curtain" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: black"></div>
       <div class="container">
         <div class="main-view">
           <nav class="nav">
