always have default user logged in

--- a/opem/views/index.html
+++ b/opem/views/index.html
@@ -32,6 +32,8 @@
           </nav>
           <div class="dropdown">
             <a class="dropdown-item" href="/opem/logout">Logout</a>
+            <a class="dropdown-item" href="/opem/login">View Login Page</a>
+            <a class="dropdown-item" href="/opem/signup">View Signup Page</a>
           </div>
           
           <div class="content">
