--- a/opem/views/css/sass/_layout.scss
+++ b/opem/views/css/sass/_layout.scss
@@ -164,13 +164,13 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 0;
+  top: -14rem;
   right: 0;
   z-index: 5;
   transition: all .2s;
   
   &:hover {
-    transform: translateY(7rem);
+    transform: translateY(21rem);
   }
   
   &-item {
