fix custom map marker in opem event template

--- a/opem/views/templates/event.html
+++ b/opem/views/templates/event.html
@@ -29,7 +29,7 @@
         };
         
         var image = {
-          url: '/img/opem-icon.png',
+          url: '/opem/views/img/opem-icon.png',
           labelOrigin: new google.maps.Point(0, -15),
         };
         
